[tool.poetry]
name = "ww-pbt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
hypothesis = "^6.88.1"
jupyterlab = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
